# ssh-key-manager

./: .gitignore  .isort.cfg  a.py  app.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
ansible/: inventory  run.yml
ansible/playbooks/: grant.yml  revoke.yml
ansible/vars/: params.yml
ssh_manager_backend/app/controllers/: __init__.py  acl.py  api_controller.py  key.py  key_creation_controller.py  key_mapping.py  private_key_controller.py  secrets.py  user.py  user_controller.py
ssh_manager_backend/app/middlewares/: auth.py
ssh_manager_backend/app/models/: __init__.py  access_control.py  keys.py  keys_mapping.py  private_keys.py  public_keys.py  session.py  user.py
ssh_manager_backend/app/services/: __init__.py  aes.py  rsa.py  utils.py
ssh_manager_backend/config/: routes.py
ssh_manager_backend/db/: __init__.py  database.py  schema.py
tasks/: __init__.py  celery.py  grant_access.py  revoke_access.py
tests/: test_data.py  test_ssh_manager_backend.py
tests/integration_tests/: user_controller_test.py
tests/models/: acl_model_test.py  key_mapping_model_test.py  key_model_test.py  session_model_test.py  user_model_test.py
tests/unit_tests/: acl_model_test.py  key_mapping_model_test.py  key_model_test.py  user_model_test.py
