[tool.poetry]
name = "ssh-manager-backend"
version = "0.1.0"
description = ""
authors = ["Kartik Behl"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
cryptography = "^3.0"
SQLAlchemy = "^1.3.19"
psycopg2 = "^2.8.5"
pre-commit = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''